--- a/poem.rmd
+++ b/poem.rmd
@@ -23,7 +23,12 @@ And cannot friends be firm and fast,
   
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
-
+An ant on the tablecloth,   
+Ran into a dormant moth,  
+Of many times his size.  
+He showed not the least surprise.  
+His business wasn't with such.  
+    
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
 
