--- a/poem.rmd
+++ b/poem.rmd
@@ -36,3 +36,18 @@ His business wasn't with such.
   
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+There are corpses,  
+clammy slabs for feet,  
+there is death in the bones,  
+like a pure sound,  
+a bark without its dog,  
+out of certain bells, certain tombs,  
+swelling in this humidity like lament or rain.  
+
+I see, when alone at times,  
+coffins under sail,  
+setting out with the pale dead, women in their dead braids,  
+bakers as white as angels,  
+thoughtful girls married to notaries,  
+coffins ascending the vertical river of the dead,  
+  
